# Wage-Labor-Record

./: .gitignore  README.md  pyproject.toml  simple_time_tracker.py
src/wage_labor_record/: __init__.py  actions.py  time_tracker_tray_icon.py  time_tracker_window.py  tracked_time_store.py  tracking_state.py  utils.py  wage_labor_record.py  wlr_app.py  worked_time_store.py  worked_time_widget.py
src/wage_labor_record/history_view/: datetime_picker.py  history_browser_window.py  selector_widget.py  summary_view.py  worked_times_list_view.py
